# RAGsystem

./: .gitignore  Cargo.toml  Dockerfile  README.md  test.txt
src/: main.rs
templates/: file_list.html  index.html
